# Semantic

./: .gitignore  CITATION.cff  Cargo.toml  LICENSE  README.md  Semantic CLI plan.md  THIRD_PARTY_NOTICES.md  architecture.md  design.md  safe_editing.md  tasks.md  workspace.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.semantic/: .env.example  edit_config.toml  error_log.example.toml  index.html  index.tsx  llm_config.toml  llm_providers.toml  llm_routing.toml  main.tsx  manifest.json  model_metrics.json  package.json  policies.toml  retrieval_policy.example.toml  style.css  token_tracking.example.toml  tsconfig.json  types.ts  validation.toml
api/: Cargo.toml
api/src/: main.rs
api_contract_graph/: Cargo.toml
api_contract_graph/src/: lib.rs
architecture_analysis/: Cargo.toml
architecture_analysis/src/: lib.rs
ast_cache/: Cargo.toml
ast_cache/src/: lib.rs
budgeter/: Cargo.toml
budgeter/src/: lib.rs
change_propagation/: Cargo.toml
change_propagation/src/: lib.rs
code_health/: Cargo.toml
code_health/src/: lib.rs
debug_graph/: Cargo.toml
debug_graph/src/: lib.rs
dependency_intelligence/: Cargo.toml
dependency_intelligence/src/: lib.rs
docs/: AB_TEST_DEV_RESULTS.md  IDE_SEMANTIC_FIRST.md  TOOL_CALLING_GUIDE.md
docs/doc_ignore/: rust_support_benchmark_bar_2026-04-18.md  rust_support_current_state_2026-04-18.md
engine/: Cargo.toml
engine/src/: lib.rs
error_log/: Cargo.toml
error_log/src/: lib.rs
evolution_graph/: Cargo.toml
evolution_graph/src/: lib.rs
impact_analysis/: Cargo.toml
impact_analysis/src/: lib.rs
improvement_planner/: Cargo.toml
improvement_planner/src/: lib.rs
indexer/: Cargo.toml
indexer/src/: lib.rs
invalidation_engine/: Cargo.toml
invalidation_engine/src/: lib.rs
knowledge_graph/: Cargo.toml
knowledge_graph/src/: lib.rs
llm_router/: Cargo.toml
llm_router/src/: lib.rs
mcp_bridge/: Cargo.toml
mcp_bridge/src/: main.rs
org_graph/: Cargo.toml
org_graph/src/: lib.rs
organization_planner/: Cargo.toml
organization_planner/src/: lib.rs
parser/: Cargo.toml
parser/src/: lib.rs
patch_engine/: Cargo.toml
patch_engine/src/: lib.rs
patch_memory/: Cargo.toml
patch_memory/src/: lib.rs
pipeline_graph/: Cargo.toml
pipeline_graph/src/: lib.rs
planner/: Cargo.toml
planner/src/: lib.rs
policy_engine/: Cargo.toml
policy_engine/src/: lib.rs
project_summariser/: Cargo.toml
project_summariser/src/: lib.rs
refactor_graph/: Cargo.toml
refactor_graph/src/: lib.rs
repo_registry/: Cargo.toml
repo_registry/src/: lib.rs
retrieval/: Cargo.toml
retrieval/src/: lib.rs
safe_edit_planner/: Cargo.toml
safe_edit_planner/src/: lib.rs
scripts/: export-quality-report.ps1  install.ps1  install.sh  semantic-tools.ps1  semantic_mcp_stdio.ps1  start-semantic-workspace.ps1  start-semantic.ps1
semantic_app/: Cargo.toml
semantic_app/src/: actions.rs  api_server.rs  config.rs  lib.rs  mcp_server.rs  models.rs  render.rs  retrieve.rs  route.rs  runtime.rs  session.rs
semantic_cli/: Cargo.toml
semantic_cli/src/: main.rs
semantic_rust/: Cargo.toml
semantic_rust/src/: cargo.rs  extractor.rs  graph.rs  lib.rs  parser.rs  resolver.rs  retrieval.rs  rust_analyzer.rs
semantic_search/: Cargo.toml
semantic_search/src/: lib.rs
service_graph/: Cargo.toml
service_graph/src/: lib.rs
src/: refactor_placeholder.ts
storage/: Cargo.toml
storage/sql/: schema.sql
storage/src/: lib.rs
symbol_similarity/: Cargo.toml
symbol_similarity/src/: lib.rs
telemetry/: Cargo.toml
telemetry/src/: lib.rs
test_coverage/: Cargo.toml
test_coverage/src/: lib.rs
test_planner/: Cargo.toml
test_planner/src/: lib.rs
test_repo/lib/: utils.py
test_repo/src/: client.ts  job.js
test_repo/todo_app/: README.md  ab_test_suite_tasks.json
test_repo/todo_app/src/: app.tsx  menu.tsx  taskService.ts  taskStore.ts  types.ts
test_support/: Cargo.toml
test_support/examples/: export_quality_report.rs
test_support/src/: lib.rs
token_tracking/: Cargo.toml
token_tracking/src/: main.rs
watcher/: Cargo.toml
watcher/src/: lib.rs
workspace/: Cargo.toml
workspace/src/: lib.rs
