[package]
name = "debug_graph"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
storage = { path = "../storage" }
patch_memory = { path = "../patch_memory" }
llm_router = { path = "../llm_router" }
