[package]
name = "evolution_graph"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
engine = { path = "../engine" }
improvement_planner = { path = "../improvement_planner" }
refactor_graph = { path = "../refactor_graph" }
serde.workspace = true
serde_json.workspace = true
