[package]
name = "impact_analysis"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
engine = { path = "../engine" }
storage = { path = "../storage" }
invalidation_engine = { path = "../invalidation_engine" }

[dev-dependencies]
tempfile = "3"
