[package]
name = "improvement_planner"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
architecture_analysis = { path = "../architecture_analysis" }
code_health = { path = "../code_health" }
serde.workspace = true
serde_json.workspace = true
