[package]
name = "indexer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
engine = { path = "../engine" }
parser = { path = "../parser" }
storage = { path = "../storage" }
walkdir.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
