[package]
name = "indexer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
engine = { path = "../engine" }
parser = { path = "../parser" }
storage = { path = "../storage" }
semantic_rust = { path = "../semantic_rust", optional = true }
walkdir.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
test_support = { path = "../test_support" }

[features]
default = []
rust-support = ["parser/rust-support", "dep:semantic_rust"]
