[package]
name = "refactor_graph"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
engine = { path = "../engine" }
patch_engine = { path = "../patch_engine" }
patch_memory = { path = "../patch_memory" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
