[package]
name = "semantic_app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
parking_lot.workspace = true
reqwest.workspace = true
urlencoding.workspace = true
clap.workspace = true
fs2.workspace = true
engine = { path = "../engine" }
error_log = { path = "../error_log" }
indexer = { path = "../indexer" }
parser = { path = "../parser" }
retrieval = { path = "../retrieval" }
storage = { path = "../storage" }
watcher = { path = "../watcher" }
refactor_graph = { path = "../refactor_graph" }
debug_graph = { path = "../debug_graph" }
pipeline_graph = { path = "../pipeline_graph" }
telemetry = { path = "../telemetry" }
project_summariser = { path = "../project_summariser" }
llm_router = { path = "../llm_router" }
impact_analysis = { path = "../impact_analysis" }
knowledge_graph = { path = "../knowledge_graph" }
test_coverage = { path = "../test_coverage" }
change_propagation = { path = "../change_propagation" }
dependency_intelligence = { path = "../dependency_intelligence" }
org_graph = { path = "../org_graph" }
walkdir.workspace = true
semantic_rust = { path = "../semantic_rust", optional = true }

[dev-dependencies]
tempfile = "3"
test_support = { path = "../test_support" }

[features]
default = []
rust-support = ["parser/rust-support", "indexer/rust-support", "dep:semantic_rust"]
