[package]
name = "semantic_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI entrypoint for Semantic's deterministic code indexing, retrieval, and routing workflows."
readme = "../README.md"
repository = "https://github.com/concensure/Semantic"
keywords = ["code-search", "semantic", "cli", "llm", "indexing"]
categories = ["command-line-utilities", "development-tools"]
default-run = "semantic"

[[bin]]
name = "semantic"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
semantic_app = { path = "../semantic_app" }

[features]
default = []
rust-support = ["semantic_app/rust-support"]
