[package]
name = "semantic_rust"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
engine = { path = "../engine" }
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true
urlencoding.workspace = true

[dev-dependencies]
tempfile = "3"
