[package]
name = "test_planner"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
engine = { path = "../engine" }
refactor_graph = { path = "../refactor_graph" }
llm_router = { path = "../llm_router" }
